# pass-authenticators

./: Cargo.toml  README.md
authenticators/bitcoin/: Cargo.toml
authenticators/bitcoin/src/: btc.rs  lib.rs  mock.rs  tests.rs
authenticators/bitcoin/src/runtime/: key_registration.rs  key_signature.rs
authenticators/ethereum/: Cargo.toml
authenticators/ethereum/src/: eth.rs  lib.rs  mock.rs  tests.rs
authenticators/ethereum/src/runtime/: key_registration.rs  key_signature.rs
authenticators/nostr/: Cargo.toml
authenticators/nostr/src/: lib.rs  mock.rs  schnorr.rs  tests.rs
authenticators/nostr/src/runtime/: key_registration.rs  key_signature.rs
authenticators/solana/: Cargo.toml
authenticators/solana/src/: lib.rs  mock.rs  sol.rs  tests.rs
authenticators/solana/src/runtime/: key_registration.rs  key_signature.rs
authenticators/ssh/: Cargo.toml
authenticators/ssh/src/: lib.rs  mock.rs  ssh.rs  tests.rs
authenticators/ssh/src/runtime/: key_registration.rs  key_signature.rs
authenticators/substrate-keys/: Cargo.toml
authenticators/substrate-keys/src/: lib.rs  mock.rs  signed_message.rs  tests.rs
authenticators/substrate-keys/src/impls/: key_registration.rs  key_signature.rs  signed_message.rs
authenticators/substrate-keys/src/runtime/: key_registration.rs  key_signature.rs
authenticators/webauthn/: Cargo.toml
authenticators/webauthn/src/: lib.rs  mock.rs  tests.rs
authenticators/webauthn/src/runtime/: assertion.rs  attestation.rs  authenticator_data.rs  client_data.rs  credential.rs  credential_record.rs  helpers.rs  mod.rs
authenticators/webauthn/src/tests/: authenticator_client.rs
authenticators/webauthn/verifier/: Cargo.toml
authenticators/webauthn/verifier/src/: lib.rs  tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  mock.rs  tests.rs
pass-webauthn/: Cargo.toml
pass-webauthn/src/: tests.rs
pass-webauthn/src/runtime/: assertion.rs  credential.rs
pass-webauthn/src/tests/: authenticator_client.rs
