[workspace.package]
authors = ["Virto Team <contact@virto.network>"]
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"
repository = "https://github.com/virto-network/pass-authenticators"

[workspace.dependencies]
# WebAuthn
base64 = { package = "simple-base64", version = "0.23.2", default-features = false }
coset = { version = "0.3.8", default-features = false }
futures = { version = "0.3.31", default-features = false, features = [
  "executor",
] }
log = { version = "0.4.27", default-features = false }
p256 = { version = "0.13.2", default-features = false }
passkey-authenticator = { version = "0.4.0", default-features = false, features = [
  "testable",
] }
passkey-client = { version = "0.4.0", default-features = false, features = [
  "testable",
] }
passkey-types = { version = "0.4.0", default-features = false, features = [
  "testable",
] }
public-suffix = "0.1.2"
rand = "0.8.5"
sha2 = { version = "0.10.8", default-features = false }
url = { git = "https://github.com/servo/rust-url", default-features = false }
url-evil = { package = "url", version = "2.5.2", default-features = false }
webauthn-verifier = { path = "authenticators/webauthn/verifier", default-features = false }

# Codecs
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
  "derive",
] }

# Substrate
sp-core = { version = "36.1.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }

# FRAME
frame = { version = "0.9.1", package = "polkadot-sdk-frame", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-scheduler = { version = "41.0.0", default-features = false }

# FRAME Contrib
traits-authn = { git = "https://github.com/virto-network/frame-contrib", package = "fc-traits-authn", default-features = false }
pallet-pass = { git = "https://github.com/virto-network/frame-contrib", package = "fc-pallet-pass", default-features = false }

[workspace]
members = ["authenticators/*"]
resolver = "2"
