[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "pass-authenticators-bitcoin"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec.workspace = true
log.workspace = true
ripemd = { workspace = true, optional = true }
scale-info = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
traits-authn.workspace = true

[dev-dependencies]
frame.workspace = true
pallet-balances.workspace = true
pallet-pass.workspace = true
pallet-scheduler.workspace = true

[features]
default = ["std", "runtime", "full-crypto"]
runtime = [
  "dep:ripemd",
  "dep:scale-info",
  "dep:sp-core",
  "dep:sp-io",
  "dep:sp-runtime",
  "traits-authn/runtime",
]
full-crypto = ["runtime", "sp-core/full_crypto"]
std = [
  "codec/std",
  "frame/std",
  "log/std",
  "pallet-balances/std",
  "pallet-pass/std",
  "pallet-scheduler/std",
  "ripemd?/std",
  "scale-info?/std",
  "sp-core?/std",
  "sp-io?/std",
  "sp-runtime?/std",
  "traits-authn/std",
]
try-runtime = [
  "pallet-pass/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-scheduler/try-runtime",
  "frame/try-runtime",
  "sp-runtime/try-runtime",
]
