[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "pass-authenticators-ethereum"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec.workspace = true
log.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
traits-authn.workspace = true
sp-io = { version = "44.0.0", default-features = false }

[dev-dependencies]
frame.workspace = true
pallet-balances.workspace = true
pallet-pass.workspace = true
pallet-scheduler.workspace = true

[features]
default = ["std", "runtime", "full-crypto"]
runtime = []
full-crypto = ["sp-core/full_crypto"]
std = [
  "codec/std",
  "frame/std",
  "log/std",
  "pallet-balances/std",
  "pallet-pass/std",
  "pallet-scheduler/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "traits-authn/std",
]
try-runtime = [
  "pallet-pass/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-scheduler/try-runtime",
  "frame/try-runtime",
  "sp-runtime/try-runtime",
]
