[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "pass-authenticators-webauthn"
repository.workspace = true
version = "0.1.0"

[dependencies]
base64 = { workspace = true, features = ["alloc"] }
codec.workspace = true
frame = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
log.workspace = true
scale-info.workspace = true
traits-authn.workspace = true
url.workspace = true
webauthn-verifier.workspace = true

[dev-dependencies]
coset.workspace = true
futures.workspace = true
pallet-balances.workspace = true
pallet-pass.workspace = true
pallet-scheduler.workspace = true
passkey-authenticator.workspace = true
passkey-client.workspace = true
passkey-types.workspace = true
public-suffix.workspace = true
url-evil.workspace = true

[features]
default = ["std", "runtime"]
runtime = ["frame/runtime", "serde", "serde_json"]
std = [
	"base64/std",
	"codec/std",
	"coset/std",
	"frame?/std",
	"futures/std",
	"log/std",
	"pallet-balances/std",
	"pallet-pass/std",
	"pallet-scheduler/std",
	"scale-info/std",
	"serde?/std",
	"serde_json?/std",
	"traits-authn/std",
	"url/std",
	"url-evil/std",
	"webauthn-verifier/std",
]
try-runtime = [
	"frame/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-pass/try-runtime",
	"pallet-scheduler/try-runtime",
]
